--- a/src/scss/blocks/_sections.scss
+++ b/src/scss/blocks/_sections.scss
@@ -2,7 +2,7 @@
 .section {
 	position: relative;
 	width: 100%;
-	height: 100vh;
+	height: var(--full-screen);
 	font-size: 1rem;
 	&.demo_mod {
 		@extend %global_flex_block_row_nowrap_center_center;
@@ -79,7 +79,7 @@
 }
 
 .section_photo {
-	height: 100vh;
+	height: var(--full-screen);
 
 	@include bp($point_2, min) {
 		flex-basis: 33.33%;
