--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -9,7 +9,7 @@
 
 html {
 	height: 100%;
-	// min-height: -webkit-fill-available;
+	min-height: -webkit-fill-available;
 	// font: 400 calc(100vw / 1920 * 10)/1.33 $font_1;
 	font-family: $font_1;
 	font-size: 10px;
@@ -32,7 +32,7 @@ body {
 
 	display: flex;
 	height: 100%;
-	// min-height: -webkit-fill-available;
+	min-height: -webkit-fill-available;
 
 	font-size: $font_size_base;
 	color: $color_text_base;
