--- a/src/pug/templates/mixins/_m_multi_slide.pug
+++ b/src/pug/templates/mixins/_m_multi_slide.pug
@@ -1,6 +1,6 @@
 mixin multi_slide(array)
 	each item in array
-		a(href='#').multi_slide.swiper-slide 
+		div(href='#').multi_slide.swiper-slide 
 			.multi_slide__in 
 				.multi_slide_blur
 					img(src= item.img).multi_slide_blur__img.cover_img
