--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,6 +8,7 @@ block content_block
 	include ../blocks/section_foto_center.pug
 	include ../blocks/section_multi_slider.pug
 	+section_foto_left(sectionFourth)
+	include ../blocks/section_multi_slider.pug
 	include ../blocks/section_scrollbar_slider.pug
 	+section_foto_right(sectionSixth)
 	include ../blocks/section_single_slider.pug
