--- a/src/pug/templates/_project_vars.pug
+++ b/src/pug/templates/_project_vars.pug
@@ -6,7 +6,7 @@ block project_vars
 	sectionFirst = [
 		{
 			title: 'Where imagination & creativity come to life',
-			img: 'images/img_1.jpg',
+			img: 'img_1',
 			logo_mod:'section_logo--mod_color_1'
 		}
 	]
@@ -15,10 +15,9 @@ block project_vars
 	sectionSecond = [
 		{
 			title: 'Design, Build & Sell your products',
-			img: 'images/img_2.jpg',
+			img: 'img_2',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt aliquet interdum massa in pulvinar ante. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed. Arcu commodo urna, phasellus neque.<br><br> Tellus dictum elementum purus pharetra dolor sit volutpat pretium. Elementum vitae risus sit quis. Sed quis gravida aliquet sodales malesuada potenti venenatis eu imperdiet.',
-			logo_mod:'section_logo--mod_color_2',
-			slide_class: 'section_img_center__wrapper'
+			logo_mod:'section_logo--mod_color_2'
 		}
 	]
 
@@ -26,32 +25,33 @@ block project_vars
 	multiSlidesArray = [
 		{
 			title: 'Have A Go Hero’s',
-			img: 'images/img_3.jpg'
+			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt aliquet interdum massa in pulvinar ante. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed. Arcu commodo urna, phasellus neque. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed. Arcu commodo urna, phasellus neque.',
+			img: 'img_3'
 		},
 		{
 			title: 'Artists',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt aliquet interdum massa in pulvinar ante. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed. Arcu commodo urna, phasellus neque.',
-			img: 'images/img_4.jpg'
+			img: 'img_4'
 		},
 		{
 			title: 'Brands',
-			img: 'images/img_5.jpg'
+			img: 'img_5'
 		},
 		{
 			title: 'Makers',
-			img: 'images/img_1.jpg'
+			img: 'img_1'
 		},
 			{
 			title: 'Have A Go Hero’s',
-			img: 'images/img_3.jpg'
+			img: 'img_3'
 		}
 	],
 
 -
 	sectionFourth = [
 		{
-			title: 'Powered by The Customiser <span class="section_title--mod_mark"> TM </span>',
-			img: 'images/img_6.jpg',
+			title: 'Powered by The Customiser <span class="img_left_section__descr--mod_mark "> TM </span>',
+			img: 'img_6',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu nisl morbi odio semper iaculis etiam elit. Arcu enim, et suspendisse condimentum quam elementum lacus, mi, a. Bibendum vitae in eget posuere vitae est. Diam pulvinar turpis rhoncus condimentum. Senectus nam sed etiam lectus mauris aliquet et. Vehicula mauris nullam placerat pretium eleifend. <br> <br> Platea metus enim lectus euismod commodo dui. Viverra vehicula vitae mus euismod. Eros, amet consequat sem enim gravida non aliquet sagittis. Erat adipiscing pharetra gravida curabitur nibh. Lectus fermentum lorem quam phasellus dolor nunc, a purus viverra. Commodo pretium ut tincidunt dictumst commodo arcu suspendisse pretium erat.'
 		}
 	]
@@ -59,22 +59,22 @@ block project_vars
 -
 	scrollbarSlidesArray = [
 		{
-			img: 'images/img_7.jpg',
+			img: 'img_7',
 		},
 		{
-			img: 'images/img_8.jpg',
+			img: 'img_8',
 		},
 		{
-			img: 'images/img_9.jpg',
+			img: 'img_9',
 		},
 		{
-			img: 'images/img_10.jpg',
+			img: 'img_10',
 		},
 		{
-			img: 'images/img_11.jpg',
+			img: 'img_11',
 		},
 		{
-			img: 'images/img_12.jpg',
+			img: 'img_12',
 		}
 	]
 
@@ -82,7 +82,7 @@ block project_vars
 	sectionSixth = [
 		{
 			title: 'A marketplace like no other',
-			img: 'images/img_10.jpg',
+			img: 'img_10',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt aliquet interdum massa in pulvinar ante. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed. Arcu commodo urna, phasellus neque.'
 		}
 	]
@@ -91,21 +91,21 @@ block project_vars
 	singleSlidesArray = [
 		{
 			title: 'Bespoke made, quality assured',
-			img: 'images/img_11.jpg',
+			img: 'img_11',
 			descr_caption: 'Limited Editions',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt aliquet interdum massa in pulvinar ante. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed. Arcu commodo urna, phasellus neque.',
 			slide_class: 'swiper-slide section_img_center__wrapper'
 		},
 		{
 			title: 'Lorem ipsum dolor sit amet',
-			img: 'images/img_12.jpg',
+			img: 'img_12',
 			descr_caption: 'Next without caption',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt aliquet interdum massa in pulvinar ante. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed.',
 			slide_class: 'swiper-slide section_img_center__wrapper'
 		},
 		{
 			title: 'Hello world',
-			img: 'images/img_10.jpg',
+			img: 'img_10',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt aliquet interdum massa in pulvinar ante. Tincidunt vivamus nulla magna semper lacus lacinia maecenas sed.',
 			slide_class: 'swiper-slide section_img_center__wrapper'
 		}
@@ -115,7 +115,7 @@ block project_vars
 	sectionEighth = [
 		{
 				title: 'A place for makers alike',
-			img: 'images/img_12.jpg',
+			img: 'img_12',
 			descr: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu nisl morbi odio semper iaculis etiam elit. Arcu enim, et suspendisse condimentum quam elementum lacus, mi, a. Bibendum vitae in eget posuere vitae est. Diam pulvinar turpis rhoncus condimentum. Senectus nam sed etiam lectus mauris aliquet et. Vehicula mauris nullam placerat pretium eleifend.'
 		}
 	]
