--- a/src/pug/templates/mixins/_m_foto_center.pug
+++ b/src/pug/templates/mixins/_m_foto_center.pug
@@ -1,14 +1,17 @@
 mixin foto_center(array)
 	each item in array
-		.section_wrapper(class= item.slide_class)
-			.section_content.section_img_center__content
-				h2.section_title.section_title--mod_size_1!= item.title
-			.section_photo
-				img(src= item.img).cover_img
-			.section_content.section_img_center__content
+		.img_center_section__wrapper(class= item.slide_class)
+			.img_center_section__content
+				h2.img_center_section__title!= item.title
+			.img_center_section__photo
+				+picture({
+					class: 'cover_img',
+					img: `${item.img}`
+				})
+			.img_center_section__content
 				if item.descr_caption
-					.section_img_center__caption!= item.descr_caption
-				.section_descr!= item.descr
+					.img_center_section__caption!= item.descr_caption
+				.img_center_section__descr!= item.descr
 			if item.logo_mod 
-				a(href='#').section_logo(class = item.logo_mod)
+				a(href='#').logo(class = item.logo_mod)
 					+icon('logo', `icon--size_mod`)
