--- a/src/pug/templates/mixins/_m_multi_slide.pug
+++ b/src/pug/templates/mixins/_m_multi_slide.pug
@@ -2,9 +2,12 @@ mixin multi_slide(array)
 	each item in array
 		div(href='#').multi_slide.swiper-slide 
 			.multi_slide__in 
-				.multi_slide_blur
-					img(src= item.img).multi_slide_blur__img.cover_img
 				.multi_slide__photo 		
-					img(src= item.img).cover_img
-				h5.multi_slide__title.section_title.section_title--mod_size_2!= item.title
-				p.multi_slide__descr.section_descr!= item.descr
+					+picture({
+						img_class: 'cover_img',
+						img: `${item.img}`
+					}) 
+				.multi_slide__content
+					h5.multi_slide__title.section_title.section_title--mod_size_2!= item.title
+					if item.descr
+						p.multi_slide__descr.section_descr!= item.descr	
