--- a/src/scss/helpers/_helpers_all.scss
+++ b/src/scss/helpers/_helpers_all.scss
@@ -7,6 +7,9 @@
 @import "extends/flex_extends";
 @import "extends/transition_extends";
 @import "extends/typography/typography";
+@import "extends/title_block_extends";
+@import "extends/descr_block_extends";
+@import "extends/photo_block_extends";
 
 @import "extends/forms/form_default_input";
 @import "extends/forms/form_default_checkbox";
